(fix) fixes uneven tab bottoms and adds more padding to list items

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -642,5 +642,5 @@ mt-0 {
 
 .saved-searches-tab {
   position: absolute;
-  right: 0;
+  right: .5rem;
 }
